<resources>
    <string name="app_name">K12CampusAlerts</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_base" translatable="false">BaseActivity</string>
    <string name="title_activity_desktop" translatable="false">Desktop Alerts</string>
    <string name="title_activity_bnotified" translatable="false">B-notified</string>

    <array name="nav_drawer_icons">
        <item>@drawable/ic_home_white_24dp</item>
        <item>@drawable/ic_email_white_24dp</item>
        <item>@drawable/ic_mic_white_24dp</item>
        <item>@drawable/ic_phone_white_24dp</item>
        <item>@drawable/ic_insert_chart_white_24dp</item>
        <item>@drawable/ic_desktop_mac_white_24dp</item>
        <item>@drawable/ic_phonelink_ring_white_24dp</item>
        <item>@drawable/ic_radio_button_unchecked_white_24dp</item>
    </array>


    <string-array name="lang_select">
        <item>English</item>
        <item>French</item>
        <item>Spanish</item>
        <item>Chinese</item>
        <item>Arabic</item>
        <item>Japanese</item>
    </string-array>


    <!-- Strings related to login -->
    <string name="title_activity_login" translatable="false">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email" translatable="false">Username</string>
    <string name="prompt_account" translatable="false">Account</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="action_sign_in_register" translatable="false"><b>Sign in</b> or register</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="action_forgot_password" translatable="false">Recover lost password</string>
    <string name="login_progress_signing_in" translatable="false">Signing in&#8230;</string>
    <string name="error_invalid_email" translatable="false">This email address is invalid</string>
    <string name="error_invalid_account" translatable="false">This account is invalid</string>
    <string name="error_invalid_password" translatable="false">This password is too short</string>
    <string name="error_incorrect_password" translatable="false">This password is incorrect</string>
    <string name="error_field_required" translatable="false">This field is required</string>
    <string name="error_field_required_list" translatable="false">You must select at least one list</string>

    <string name="one_step_alert" translatable="false">1-Step Alert® (email, text, voice)</string>
    <string name="one_step_alert_short" translatable="false">1-Step Alert®</string>
    <string name="one_step_call" translatable="false">1-Step Call®</string>
    <string name="text_to_speech" translatable="false">Text-To-Speech</string>
    <string name="reports" translatable="false">View Reports</string>
    <string name="desktop_alerts_menu" translatable="false">Send Desktop Alerts</string>
    <string name="desktop_alerts" translatable="false">Desktop Alerts</string>
    <string name="b_notified" translatable="false">B-Notified</string>
    <string name="copyright_notice" translatable="false">
        Copyright © 2002–2018 Message Logix, Inc. All rights reserved.
        Patented (U.S. Patent No. 8,180,274) additional patents pending</string>


    <string name="action_sign_in" translatable="false">Sign in</string>
    <string name="permission_rationale" translatable="false">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sender_name">Sender name</string>
    <string name="subject" translatable="false">Subject</string>
    <string name="type_in_a_message" translatable="false">Type in a message</string>
    <string name="choose_message" translatable="false">Choose message</string>
    <string name="select_list_s" translatable="false">Select list(s)</string>
    <string name="send" translatable="false">Send</string>
    <string name="alert_dialog_ok" translatable="false">Ok</string>
    <string name="alert_dialog_cancel" translatable="false">Cancel</string>
    <string name="home" translatable="false">Home</string>
    <string name="title_reportitem_list" translatable="false">Items</string>
    <string name="title_reportitem_detail" translatable="false">Report Detail</string>
    <string name="email_reports" translatable="false">Email Reports</string>
    <string name="text_to_cell_reports" translatable="false">Text-to-Cell Reports</string>
    <string name="phone_reports" translatable="false">Phone Reports</string>
    <string name="cannot_get_report_details" translatable="false">Could not get report details</string>
    <string name="title_activity_desktop_alerts" translatable="false">DesktopAlerts</string>
    <string name="enter_subject" translatable="false">Enter Subject</string>
    <string name="b_notified_message_prompt" translatable="false">Please type in a message</string>
    <string name="title_activity_settings" translatable="false">Settings</string>
    <string name="section_format" translatable="false">Hello World from section: %1$d</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="bnotified_validation_title" translatable="false">Missing Required field</string>
    <string name="bnotified_validation_message" translatable="false">You must enter a subject and a message</string>
    <string name="success_title" translatable="false">Message Sent</string>
    <string name="success_title_schedule" translatable="false">Message Scheduled</string>
    <string name="success_message" translatable="false">Your message has been sent successfully!</string>
    <string name="success_schedule" translatable="false">Your message has been scheduled successfully!</string>
    <string name="agree" translatable="false">Agree</string>
    <string name="disagree" translatable="false">Disagree</string>
    <string name="clear_selection" translatable="false">clear</string>
    <string name="choose_voice" translatable="false">Choose a voice</string>
    <string name="tts_schedule" translatable="false">Text-To-Speech Schedule</string>
    <string name="no_list" translatable="false">Lists unavailable</string>
    <string name="message_deleted" translatable="false">Message Deleted</string>
    <string name="success_deleted_message" translatable="false">Your message has been deleted successfully</string>
    <string name="message_saved" translatable="false">Message Saved</string>
    <string name="success_message_saved" translatable="false">Your message has been successfully saved</string>
    <string name="enter_a_message_name" translatable="false">Enter a message name</string>
    <string name="schedule_this_message" translatable="false">Schedule this message</string>
    <string name="save" translatable="false">Save</string>
    <string name="error" translatable="false">Error</string>
    <string name="failed_to_send" translatable="false">Failed to send the message</string>
    <string name="no_alerts" translatable="false">No active alerts</string>
    <string name="Female_Voice" translatable="false">Female Voice</string>
    <string name="Male_Voice" translatable="false">Male Voice</string>
    <string name="enter_a_message" translatable="false">Enter a message</string>
    <string name="language_setting" translatable="false">Language Settings</string>
    <string name="select_language" translatable="false">Select Language</string>
    <string name="change" translatable="false">Change</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="schedule" translatable="false">Schedule</string>
    <string name="send_sb_alerts" translatable="false">Send Smart Button® Alerts</string>
    <string name="title_sendSBAlerts" translatable="false">Send Smart Button® Alert</string>


</resources>
