<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="messagelogix.com.k12campusalerts.activities.onestepcall.OneStepCallPlayActivity"
    android:focusableInTouchMode="true">
    <ImageButton
        android:id="@+id/playButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@null"
        android:scaleType="fitCenter"
        android:src="@drawable/play_sound"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/messageNameEditText"
        android:layout_below="@+id/playButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="39dp"
        android:hint="@string/enter_a_message_name"
        android:layout_toLeftOf="@+id/saveButton"
        android:layout_toStartOf="@+id/saveButton"
        android:inputType="textAutoCorrect"
        />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/saveButton"
        android:layout_alignBottom="@+id/messageNameEditText"
        android:background="@color/btn_green"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/schedule_this_message"
        android:id="@+id/scheduleButton"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="90dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/saveButton"
        android:layout_alignEnd="@+id/saveButton"
        android:textColor="@android:color/white"
        android:background="@drawable/bg_button_green_rounded"/>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="bottom|end"
        android:src="@drawable/ic_delete_black_24dp" />

</RelativeLayout>
